force-app/main/default/objects/CoIT_In_Jeopardy_History__c/CoIT_In_Jeopardy_History__c.object-meta.xml
<CustomObject>
    <label>In Jeopardy History</label>
    <nameField>
        <displayFormat>IJH-{0000}</displayFormat>
        <label>In Jeopardy History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>In Jeopardy History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>