force-app/main/default/objects/CoIT_In_Jeopardy_History__c/fields/CoIT_Case__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>In Jeopardy History</relationshipLabel>
    <relationshipName>In_Jeopardy_History</relationshipName>
    <type>Lookup</type>
</CustomField>