force-app/main/default/objects/CoIT_In_Jeopardy_History__c/fields/CoIT_Date_Close__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Date_Close__c</fullName>
    <label>Date Close</label>
    <type>DateTime</type>
</CustomField>