force-app/main/default/objects/CoIT_In_Jeopardy_History__c/fields/CoIT_In_Jeopardy_Reason__c.field-meta.xml
<CustomField>
    <fullName>CoIT_In_Jeopardy_Reason__c</fullName>
    <label>In Jeopardy Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unscheduled service</fullName>
            </value>
            <value>
                <fullName>Service not dispatched to technician</fullName>
            </value>
            <value>
                <fullName>Technician has not accepted the service</fullName>
            </value>
            <value>
                <fullName>Technician has not started travel</fullName>
            </value>
            <value>
                <fullName>Technician has not arrived on site</fullName>
            </value>
            <value>
                <fullName>Technician is taking more time than required</fullName>
            </value>
            <value>
                <fullName>No technicians were found available for the offer</fullName>
            </value>
            <value>
                <fullName>No candidates found</fullName>
            </value>
            <value>
                <fullName>Failed service, contact customer</fullName>
            </value>
            <value>
                <fullName>Urgent, repair not possible, assistance concept required</fullName>
            </value>
            <value>
                <fullName>The service has not been accepted by any technician</fullName>
            </value>
            <value>
                <fullName>Service accepted but not scheduled</fullName>
            </value>
            <value>
                <fullName>Delayed Finish</fullName>
                <isActive>false</isActive>
                <label>Delayed Finish</label>
            </value>
            <value>
                <fullName>Delayed Start</fullName>
                <isActive>false</isActive>
                <label>Delayed Start</label>
            </value>
            <value>
                <fullName>No Response</fullName>
                <isActive>false</isActive>
                <label>No Response</label>
            </value>
            <value>
                <fullName>Problems with scheduling</fullName>
                <isActive>false</isActive>
                <label>Problems with scheduling</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>