force-app/main/default/objects/CoIT_In_Jeopardy_History__c/fields/CoIT_Service_Appointment__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Service_Appointment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Appointment</label>
    <referenceTo>ServiceAppointment</referenceTo>
    <relationshipLabel>In Jeopardy History</relationshipLabel>
    <relationshipName>In_Jeopardy_History</relationshipName>
    <type>Lookup</type>
</CustomField>