force-app/main/default/objects/CoIT_In_Jeopardy_History__c/fields/CoIT_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>In Jeopardy History</relationshipLabel>
    <relationshipName>In_Jeopardy_History</relationshipName>
    <type>Lookup</type>
</CustomField>