force-app/main/default/objects/CoIT_In_Jeopardy_History__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CoIT_Case__c</columns>
    <columns>CoIT_Work_Order__c</columns>
    <columns>CoIT_Service_Appointment__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CoIT_Date_Close__c</columns>
    <columns>CoIT_In_Jeopardy_Reason__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>